# ywm

./: .gitignore  Changelog  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  client.h  config.h.in  configure  configure.ac  event.c  event.h  list.c  list.h  menu.c  menu.h  test.c  util.c  util.h  ylist.c  ylist.h  ywm.c  ywm.h
.github/workflows/: makefile.yml
autom4te.cache/: output.0  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in  client.h  config.c  config.h  event.c  event.h  menu.c  menu.h  theme.h  util.c  util.h  ylist.c  ylist.h  ywm.c  ywm.h  ywm.menu
